test/e2e/resources/s3-connectivity-job-assert.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: cosi-s3-connectivity
status:
  succeeded: 1
